# music_mental_health_analysis

./: Makefile  README.md  environment.yml  pyproject.toml
config/: column_types.json  column_types_test.json  domain_rules.json  feature_config.json  gbc_model_config.json  generate_param_grids.py  sampling_config.json
docs/: mkdocs.yml
docs/docs/: index.md
models/: gbc_model.pkl
music_and_mental_health_survey_analysis/: __init__.py  cleaning.py  config.py  dataset.py  features.py  plots.py  sampling.py  utils.py
music_and_mental_health_survey_analysis/modeling/: predict.py  train.py
notebooks/: 0.00-aj-initial-exploration.ipynb  0.01-aj-initial-exploration.ipynb  0.02-aj-bpm-imputation.ipynb  0.03-aj-hours-outliers.ipynb  0.10-aj-test-cleaning.ipynb  0.11-aj-test-feature-engineering.ipynb  0.12-aj-sampling.ipynb  0.12-aj-test-imputations.ipynb  0.20-aj-modeling.ipynb  0.31-aj-test-feature-engineering.ipynb  0.32-aj-test-sampling.ipynb
reports/: training_scores.csv
