[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "music_and_mental_health_survey_analysis"
version = "0.0.1"
description = "Analysis of Music and Mental Health Survey Results."
authors = [
  { name = "Arsen Jamkotchian" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["music_and_mental_health_survey_analysis"]
include = ["pyproject.toml", "music_and_mental_health_survey_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["music_and_mental_health_survey_analysis"]
force-sort-within-sections = true

